Update project tiles with new content, fix vertical align issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,9 +96,11 @@
 .project-tile {
   box-shadow: 2px 2px 10px #4e4e4e;
   display: inline-block;
+  height: 280px;
   margin: 15px 10px;
   padding: 5px;
   transition: 0.5s;
+  vertical-align: top;
   width: 30.2%;
 }
 
